--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,19 +26,19 @@ jobs:
         run: git fetch --prune --unshallow
       -
         name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5.4.0
         with:
-          go-version: 1.15
+          go-version: 1.24
       -
         name: Import GPG key
         id: import_gpg
-        uses: paultyng/ghaction-import-gpg@v2.1.0
+        uses: crazy-max/ghaction-import-gpg@v6.3.0
         env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+          GPG_PRIVATE_KEY: ${{ secrets.TF_GPG_PRIVATE_KEY }}
+          PASSPHRASE: ${{ secrets.TF_GPG_PASSPHRASE }}
       -
         name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v6.3.0
         with:
           version: latest
           args: release --rm-dist
