--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,7 @@ jobs:
         name: Import GPG key
         id: import_gpg
         uses: crazy-max/ghaction-import-gpg@v6.3.0
-        env:
+        with:
           gpg_private_key: ${{ secrets.TF_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.TF_GPG_PASSPHRASE }}
       -
